syntax = "proto3";

package proto;

service MfaService {
    rpc Create (MfaCreateDataRequest) returns (MfaCreateDataResponse) {
    }
    rpc Check (MfaCheckDataRequest) returns (MfaCheckDataResponse) {
    }
}

message MfaCreateDataRequest {
    string AppID = 1;
    string AppName = 2;
    string UserID = 3;
    string Email = 4;
    int32 QrSize = 5;
}

message MfaCreateDataResponse {
    string SecretKey = 1;
    string URL = 2;
    string QrCodeURL = 3;
    string ImageBased = 4;
    repeated string RecoveryCode = 5;
}

message MfaCheckDataRequest {
    string AppID = 1;
    string UserID = 2;
    string Code = 3;
}

message MfaCheckDataResponse {
    bool Result = 1;
    Error Error = 2;
}

message Error {
    string Message = 1;
}
